# symphony-py

./: AGENTS.md  README.md  WORKFLOW.md  pyproject.toml
docs/: SECURITY.md  TESTING.md
src/symphony_py/: activity_log.py  alert_state.py  main.py  models.py  orchestrator.py  state_store.py  thread_index.py  workflow_loader.py
src/symphony_py/api/: app.py  schemas.py
src/symphony_py/runtime/: codex_runner.py  workspace.py
src/symphony_py/tracker/: linear_client.py
tests/: test_admin_alert_api.py  test_alert_recommendations.py  test_alert_state_store.py  test_dashboard_html_contains_toast_and_actions.py  test_ops_api.py  test_thread_index_watch_timestamps.py  test_workflow_loader.py
